アプリ名を一級建築士試験 過去問学習アプリ Architest に変更

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* =============================================
-   一級建築士 学習アプリ - スタイルシート
+   一級建築士試験 過去問学習アプリ「Architest」 - スタイルシート
    ============================================= */
 
 /* CSS Variables */
