fix: stats-row内のstats-detailsからmargin-bottomを除去して高さを揃える

--- a/css/style.css
+++ b/css/style.css
@@ -2079,6 +2079,10 @@ textarea {
         min-width: 0;
     }
 
+    .stats-row>.stats-details {
+        margin-bottom: 0;
+    }
+
     .stats-row>.stats-card-large {
         display: flex;
         flex-direction: column;
